fix: header + content alignment

--- a/src/styles/Connect.module.scss
+++ b/src/styles/Connect.module.scss
@@ -3,7 +3,7 @@
 
 .main {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
