--- a/src/styles/GetStarted.module.scss
+++ b/src/styles/GetStarted.module.scss
@@ -3,7 +3,7 @@
 
 .main {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
