--- a/src/styles/Payout/Payout.module.scss
+++ b/src/styles/Payout/Payout.module.scss
@@ -6,7 +6,7 @@
 
     .inner {
         width: 100%;
-        max-width: 1200px;
+        max-width: 1000px;
 
         .toolbar {
             width: 100%;
