--- a/src/styles/Payout/PayoutForm.module.scss
+++ b/src/styles/Payout/PayoutForm.module.scss
@@ -6,9 +6,8 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     box-sizing: border-box;
-    padding: 40px;
 
     h2 {
         font-weight: 500;
