--- a/src/styles/Payout/Selector.module.scss
+++ b/src/styles/Payout/Selector.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .optionContainer {
         display: flex;
